[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "/candore",
    "/apix",
]

[tool.hatch.build.targets.wheel]
packages = [
    "/candore",
    "/apix",
]

[project]
name = "candore"
dynamic = ["version"]
readme = "README.md"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "Jitendra Yejare" },
]
maintainers = [
    { name = "Jitendra Yejare" },
]
keywords = [
    "distutils",
    "hatch",
    "api",
    "data",
    "upgrades",
    "validation"
]
dependencies = [
    "aiohttp",
    "asyncio",
    "click",
    "dynaconf",
    "logzero",
    "lxml",
    "flask",
    "requests",
    "PyYAML",
]

[project.optional-dependencies]
test = [
    "mock",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-variables",
    "coveralls",
]

[project.scripts]
candore = "candore.cli:candore"

[tool.black]
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
